Fixed overflow x issue

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -3,10 +3,14 @@ body {
     color: $dark-font-color;
 }
 
+.container {
+    width: 100%;
+    overflow-x: hidden;
+}
+
 .flexContainer {
     > *:not(.showcase) {
         padding: 1em;
-
         @media screen and (min-width: 375px) {
             padding: 1em 2em;
         }
@@ -17,10 +21,6 @@ body {
 .container__mobile-header {
     display: none;
 }
-
-// @media screen and (max-width: 899px) {
-
-// }
 
 @media screen and (min-width: 900px) {
     .flexContainer {
